packages/vlossom/src/components/vs-table/VsTable.css
@reference 'tailwindcss';

.vs-table {
    --vs-table-sticky-header-z-index: 100;

    @apply relative w-full;

    .vs-table-content {
        @apply min-w-full overflow-x-auto;
    }

    .vs-table-sticky-wrapper {
        @apply pointer-events-none sticky w-full overflow-hidden;
        z-index: var(--vs-table-sticky-header-z-index);
        padding-bottom: 1rem;

        .vs-table-sticky-header {
            @apply pointer-events-auto w-full;
            box-shadow: 0 0 0.8rem 0 var(--vs-cs-shadow-color);
            background-color: var(--vs-no-color);

            th {
                border-bottom: 1px solid var(--vs-cs-line);
            }
        }
    }

    table {
        @apply mx-auto min-w-full;
        border-collapse: separate;
        border-spacing: 0;
    }

    tr {
        @apply grid;
    }

    thead tr {
        border-top-right-radius: calc(var(--vs-radius-ratio) * var(--vs-radius-md));
        border-top-left-radius: calc(var(--vs-radius-ratio) * var(--vs-radius-md));
        background-color: var(--vs-cs-bg-colored);

        th {
            grid-row: 1;
            color: var(--vs-cs-font-colored);
            font-weight: var(--vs-font-weight);
        }
    }

    tbody tr {
        @apply transition-colors duration-250 ease-in-out;

        &.vs-stated {
            background-color: var(--vs-state-color-bg);
        }

        &.vs-selected {
            background-color: var(--vs-cs-bg-comp-colored);
            color: var(--vs-cs-font);
        }

        &:last-child {
            border-bottom: 1px solid var(--vs-cs-line);
        }

        > td:not(.vs-table-expanded-row) {
            grid-row: 1;
        }

        > td.vs-table-expanded-row {
            grid-row: 2;
            grid-column: 1 / -1;
            border: none;
            padding: 0;

            .vs-table-expand-fallback {
                margin: 0;
                font: inherit;
                white-space: pre-wrap;
            }
        }

        &:hover {
            background-color: var(--vs-cs-bg-area-colored);
        }
    }

    th {
        @apply flex items-center;
        border-top: 1px solid var(--vs-cs-line);
        padding: 0.6rem 0.8rem;
        text-align: left;

        &:first-child {
            border-left: 1px solid var(--vs-cs-line);
            border-top-left-radius: calc(var(--vs-radius-ratio) * var(--vs-radius-md));
        }
        &:last-child {
            border-right: 1px solid var(--vs-cs-line);
            border-top-right-radius: calc(var(--vs-radius-ratio) * var(--vs-radius-md));
        }

        > * {
            @apply w-full;
        }
    }

    td {
        @apply flex items-center;
        border-top: 1px solid var(--vs-cs-line);
        padding: 0.6rem 0.8rem;
        text-align: left;

        > * {
            @apply w-full;
        }
    }

    th,
    td {
        * {
            min-height: unset;
            line-height: var(--vs-comp-height-md);
        }
    }

    .vs-table-search-input {
        @apply mb-2 flex justify-end;
    }

    &.vs-responsive {
        @apply w-full;
        container-type: inline-size;
    }

    &.vs-dense {
        th,
        td {
            @apply px-[0.375rem] py-[0.5rem];
            * {
                font-size: var(--vs-font-size-sm);
                line-height: var(--vs-comp-height-sm);
            }
        }

        td.vs-table-expanded-row {
            @apply px-0 py-0;
        }
    }

    &.vs-primary {
        thead tr th {
            border-color: var(--vs-cs-line);
            background-color: var(--vs-cs-bg-primary);
            color: var(--vs-cs-font-primary);
            font-weight: var(--vs-font-weight-bold);
        }
    }

    .vs-table-draggable-wrapper {
        /* display: contents를 사용하는 이유:
           - draggable의 wrapper 엘리먼트가 DOM 구조상 table, tr, tbody 등과 섞이면서 table 레이아웃이 깨지는 문제를 막기 위해
           - 'display: contents'는 wrapper 자체를 렌더링하지 않고 자식만 렌더링시켜 table 구조를 그대로 유지
           - 즉, drag&drop 컴포넌트의 불필요한 wrapper가 DOM에서 제거된 효과를 줌 */
        display: contents;
    }

    th.vs-table-drag-handle {
        @apply w-6 px-0!;
        svg {
            @apply hidden;
        }
    }
    td.vs-table-drag-handle {
        @apply w-6 cursor-grab px-0!;
        color: var(--vs-cs-line);
    }

    th.vs-table-expand-handle {
        width: 3.6rem;
    }
    td.vs-table-expand-handle {
        width: 3.6rem;
    }
}

/* Pagination */
.vs-table-pagination {
    @apply flex items-center justify-between py-4;
    container-type: inline-size;
}

.vs-table-pagination-info {
    @apply flex items-center gap-4;
}

.vs-total-items {
    @apply text-sm whitespace-nowrap opacity-70;
    color: var(--vs-cs-font);
}

caption {
    @apply caption-bottom;
}

@container (max-width: 1024px) {
    .vs-table {
        &.vs-responsive {
            .vs-table-content {
                @apply overflow-x-visible;
            }

            table {
                @apply min-w-full;
            }

            tbody,
            th,
            td,
            tr {
                @apply block w-full border-x-0;
            }

            thead {
                @apply absolute m-0 block h-1 w-1 overflow-hidden border-0;
            }

            tbody tr {
                @apply mx-0 mb-3 border border-solid;
                border: 0.0325rem solid var(--vs-cs-line);
            }

            td {
                @apply grid gap-2 border-r-0 border-b border-l-0 border-dashed p-3;
                grid-column: minmax(6rem, 9rem) 1fr;
            }

            td:first-child {
                @apply border-t-0;
            }

            td:last-child {
                @apply border-b-0;
            }

            td::before {
                @apply font-bold;
                content: attr(data-label);
            }

            td.vs-table-drag-handle {
                @apply w-6 px-0 py-1;
            }

            &.vs-dense {
                td,
                th {
                    @apply px-[0.375rem] py-[0.5rem];
                    * {
                        font-size: var(--vs-font-size-sm);
                        line-height: var(--vs-comp-height-sm);
                    }
                }
            }
        }

        .vs-table-pagination {
            @apply flex-col-reverse items-center justify-center gap-2;
        }
    }
}

